--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -19,16 +19,16 @@ jobs:
     name: Collect & SpeedTest & Filter
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3.7.0
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "18.x"
-      - uses: bahmutov/npm-install@v1.6.0
+      - uses: bahmutov/npm-install@v1
         with:
           working-directory: ./utils/localserver
-      - uses: actions/setup-python@v4.7.0
+      - uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.11"
           cache: "pip"
       # setup actions has built-in caching function
       # - uses: actions/cache@v3
@@ -112,7 +112,6 @@ jobs:
           git add README.md
           git add ./update/*
           git add LogInfo.txt
-          git clean -f -d
           git commit -m "✔️ $(date '+%Y-%m-%d %H:%M:%S') Filtered"
       - name: Push Change
         uses: ad-m/github-push-action@master
